--- a/curriculum.html
+++ b/curriculum.html
@@ -25,16 +25,16 @@
             <h2 class="apresentacao__conteudo__titulo">Experiências</h2>
             <p class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
-                <li> Empresa tal (2020 - 2021) - fazia isso e aquilo </li>
-                <li> Empresa tal (2021 - 2023) - fazia isso e aquilo </li>
+                <li> Empresa (2020 - 2021) - fazia isso  </li>
+                <li> Empresa (2021 - 2023) - fazia isso  </li>
             </ul>
             </p>
             <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a> </li>
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
+                <li>Curso  - Alura Cursos <a href="linkdocertificado">com certificado</a> </li>
+                <li>Curso  - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
+                <li>Curso - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
             </ul>
             </div>    
         </section>
